# Euteran

./: .gitignore  CMakeLists.txt  Makefile  copy_style.py  main.c  meson.build
Style/: colors.css  devices.css  progress_bar.css  separator.css  style.css
Style/dark/: devices.css  progress_bar.css  style.css
Style/light/: devices.css  progress_bar.css  style.css
src/: audio.c  audio.h  audio_devices.c  audio_devices.h  constants.h  e_commandw.c  e_commandw.h  e_logs.c  e_logs.h  e_widgets.c  e_widgets.h  eut_async.c  eut_async.h  eut_audiodevices.c  eut_audioinput.c  eut_audioinput.h  eut_audiolinux.c  eut_audiolinux.h  eut_binaryparser.c  eut_binaryparser.h  eut_constants.h  eut_dialogs.c  eut_dialogs.h  eut_foldercb.c  eut_foldercb.h  eut_logs.c  eut_main_object.c  eut_main_object.h  eut_musiclistfunc.c  eut_musiclistfunc.h  eut_settings.c  eut_settings.h  eut_subwindow.c  eut_subwindow.h  eut_subwindowimpl.c  eut_subwindowimpl.h  eut_utils.c  eut_utils.h  eut_widgetsfunctions.c  eut_widgetsfunctions.h  (+16 more)
src/sh/: brokenlinks.sh
src/wav/: dr_wav.c
ui/: euteran_audio_devices.blp  euteran_main.blp
ux/: euteran_audio_devices.ui  euteran_main.ui
